--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "node": ">= 0.12.0"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "versionCompatibility": {
+      "ember": ">=2.7.3"
+    }
   }
 }
