--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 ---
 language: node_js
 node_js:
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
   - "4"
   - "6"
   - "7"
@@ -25,9 +27,7 @@ before_install:
   - npm config set spin false
 
 install:
-  - npm install -g bower
   - npm install
-  - bower install
 
 script:
   - ember try:each
