--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-cli-update": "0.13.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-native-dom-helpers": "^0.5.10",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.17.0",
     "loader.js": "^4.2.3"
