--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "A service for (un)binding key up and down events.",
   "keywords": [
     "ember-addon",
-    "keyboard",
     "key",
-    "keyboard events",
-    "key events",
+    "key bindings",
     "key combos",
+    "key events",
+    "key macros",
+    "key shortcuts",
+    "keyboard",
+    "keyboard bindings",
+    "keyboard combos",
+    "keyboard events",
+    "keyboard macros",
     "keyboard shortcuts",
-    "key bindings"
+    "macros"
   ],
   "license": "MIT",
   "author": "Patrick Berkeley <patrick@icarus.works>",
@@ -24,6 +30,7 @@
   "repository": "https://github.com/IcarusWorks/ember-key-manager",
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
     "test": "ember try:each"
   },
@@ -33,7 +40,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.17.1",
+    "ember-cli": "~2.18.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
@@ -48,7 +55,9 @@
     "ember-load-initializers": "^1.0.0",
     "ember-native-dom-helpers": "^0.5.10",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.17.0",
+    "ember-source": "~2.18.0",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^5.2.1",
     "loader.js": "^4.2.3"
   },
   "engines": {
