--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.16.0"
+    "ember-cli-babel": "^6.16.0",
+    "ember-copy": "^1.0.0",
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
@@ -53,7 +54,6 @@
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-cli-update": "0.13.2",
-    "ember-copy": "^1.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
