implement in typescript

--- a/package.json
+++ b/package.json
@@ -36,17 +36,25 @@
     "start": "ember serve",
     "test": "npm-run-all lint:* test:*",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
+    "test:ember-compatibility": "ember try:each",
+    "prepack": "ember ts:precompile",
+    "postpack": "ember ts:clean"
   },
   "dependencies": {
     "ember-cli-babel": "^7.22.1",
     "ember-cli-htmlbars": "^5.3.1",
+    "ember-cli-typescript": "^4.0.0",
     "ember-copy": "^1.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@glimmer/component": "^1.0.2",
     "@glimmer/tracking": "^1.0.2",
+    "@types/ember": "^3.16.1",
+    "@types/ember-qunit": "^3.4.12",
+    "@types/ember-resolver": "^5.0.10",
+    "@types/ember__test-helpers": "^1.7.3",
+    "@types/qunit": "^2.9.5",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.6.0",
@@ -56,6 +64,7 @@
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.0",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-update": "0.13.2",
     "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
@@ -73,7 +82,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.5.0"
+    "qunit-dom": "^1.5.0",
+    "typescript": "^4.0.3"
   },
   "engines": {
     "node": "10.* || >= 12"
