--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modifier": "^2.1.1",
     "ember-native-dom-helpers": "^0.5.10",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.2",
