--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ember-cli-terser": "^4.0.0",
     "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-update": "0.13.2",
+    "ember-config-service": "^1.0.0",
     "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
