--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "ember-cli-babel": "^7.22.1",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-typescript": "^4.0.0",
-    "ember-copy": "^1.0.0"
+    "ember-config-service": "^1.0.0",
+    "ember-copy": "^1.0.0",
+    "ember-modifier": "^2.1.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -58,7 +60,6 @@
     "@types/qunit": "^2.9.5",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.6.0",
     "ember-classic-decorator": "^2.0.0",
     "ember-cli": "~3.22.0",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -67,13 +68,10 @@
     "ember-cli-terser": "^4.0.0",
     "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-update": "0.13.2",
-    "ember-config-service": "^1.0.0",
     "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-modifier": "^2.1.1",
-    "ember-native-dom-helpers": "^0.5.10",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.22.0",
